--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rstatsjs",
-  "version": "1.0.1",
+  "name": "@jpweeks/rstats",
+  "version": "1.1.0",
   "description": "JavaScript Performance Monitor",
-  "main": "index.js",
+  "main": "src/rStats.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
